# memory-agent-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_NORMS.md  LICENSE  README.md  RESULTS.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
benchmarks/results/: latest_results.json
benchmarks/scenarios/: policy_small_talk_memory.json  retrieval_preference.json  retrieval_project_memory.json  retrieval_robotics_memory.json  tag_filter_project_memory.json
docs/: api_reference.md  architecture.md  benchmarks.md  comparison.md  developer_grade_hardening.md  evaluation_harness.md  examples.md  memory_lifecycle.md  memory_lifecycle_diagram.md  primitives.md  production_readiness.md  release_checklist.md  repo_audit.md  retrieval_diagnostics.md  retrieval_trace_api.md  roadmap.md  task_agent_demo.md
examples/: agent_loop_demo.py  basic_session_memory.py  correction_demo.py  forgetting_demo.py  memory_lifecycle_demo.py  retrieval_demo.py  task_agent_demo.py
memory_agent_sdk/: __init__.py  correction.py  evaluation.py  events.py  exceptions.py  forgetting.py  memory.py  policies.py  retrieval.py  session.py  store.py  types.py
tests/: test_correction.py  test_evaluation.py  test_exceptions.py  test_expiry.py  test_forgetting.py  test_memory_lifecycle_demo.py  test_policies.py  test_retrieval.py  test_session_memory.py  test_store_persistence.py  test_store_serialization.py
(+1 files in other folders)
